Use template as much as possible

--- a/templates/home/.vimrc.j2
+++ b/templates/home/.vimrc.j2
@@ -1,3 +1,5 @@
+{{ ansible_managed | comment(decoration='" ') }}
+
 set nocompatible                " choose no compatibility with legacy vi
 syntax enable
 set encoding=utf-8
