--- a/templates/home/.tmux.conf.j2
+++ b/templates/home/.tmux.conf.j2
@@ -1,3 +1,5 @@
+{{ ansible_managed | comment }}
+
 # remap prefix from 'C-b' to ²
 set -g prefix ²
 bind-key ² send-prefix
@@ -5,6 +7,9 @@ unbind C-b
 
 # Start window numbering at 1
 set -g base-index 1
+
+# Default shell under tmux
+set-option -g default-shell /usr/bin/zsh
 
 # Automatically set window title
 set-window-option -g automatic-rename on
@@ -15,8 +20,6 @@ set -g status-keys vi
 set -g history-limit 10000
 
 set -g mouse on
-set -g set-clipboard external
-bind-key -T root MouseDown2Pane run-shell -b "xclip -o | tmux load-buffer - && tmux paste-buffer"
 
 setw -g mode-keys vi
 setw -g monitor-activity on
@@ -36,13 +39,13 @@ bind-key M-l resize-pane -R
 
 # Vim style pane selection
 bind h select-pane -L
-bind j select-pane -D 
+bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
-bind -n M-j select-pane -D 
+bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
