--- a/templates/home/.zshrc.j2
+++ b/templates/home/.zshrc.j2
@@ -1,8 +1,10 @@
+{{ ansible_managed | comment }}
+
 # If you come from bash you might have to change your $PATH.
 # export PATH=$HOME/bin:/usr/local/bin:$PATH
 
 # Path to your oh-my-zsh installation.
-export ZSH="{{ dotdir }}/oh-my-zsh"
+export ZSH="$HOME/{{ dotdir }}/oh-my-zsh"
 
 # Set name of the theme to load --- if set to "random", it will
 # load a random theme each time oh-my-zsh is loaded, in which case,
