Start zsh in terminals as custom command

--- a/templates/home/.config/terminator/config.j2
+++ b/templates/home/.config/terminator/config.j2
@@ -14,3 +14,4 @@
     scrollback_infinite = True
     scrollback_lines = {{ terminal.scrollback }}
     use_system_font = False
+    custom_command = zsh
