--- a/templates/home/.config/terminator/config.j2
+++ b/templates/home/.config/terminator/config.j2
@@ -14,4 +14,5 @@
     scrollback_infinite = True
     scrollback_lines = {{ terminal.scrollback }}
     use_system_font = False
-    custom_command = zsh
+    use_custom_command = True
+    custom_command = /usr/bin/zsh
