--- a/templates/home/.config/tilda/config_0.j2
+++ b/templates/home/.config/tilda/config_0.j2
@@ -25,7 +25,7 @@ copy_key="<Shift><Control>c"
 paste_key="<Shift><Control>v"
 quit_key="<Shift><Control>q"
 title="Tilda"
-background_color="{{ terminal.background.color }}"
+background_color="{{ terminal.background.color2 }}"
 # working_dir=""
 web_browser="x-www-browser"
 increase_font_size_key="<Control>equal"
@@ -68,9 +68,9 @@ title_max_length=25
 # TODO: convert palette to these numbers...
 palette = {11822, 13364, 13878, 52428, 0, 0, 20046, 39578, 1542, 50372, 41120, 0, 13364, 25957, 42148, 30069, 20560, 31611, 1542, 38944, 39578, 54227, 55255, 53199, 21845, 22359, 21331, 61423, 10537, 10537, 35466, 58082, 13364, 64764, 59881, 20303, 29298, 40863, 53199, 44461, 32639, 43176, 13364, 58082, 58082, 61166, 61166, 60652}
 scrollbar_pos=2
-back_red=10794
-back_green=2313
-back_blue=10794
+back_red={{ terminal.background.color2 | rgb("r") }}
+back_green={{ terminal.background.color2 | rgb("g") }}
+back_blue={{ terminal.background.color2 | rgb("b") }}
 text_red=34952
 text_green=35466
 text_blue=34181
