--- a/templates/home/.zshrc.j2
+++ b/templates/home/.zshrc.j2
@@ -111,6 +111,8 @@ source "$HOME/.p10k.zsh"
 # Example aliases
 # alias zshconfig="mate ~/.zshrc"
 # alias ohmyzsh="mate ~/.oh-my-zsh"
+alias pbcopy='xclip -selection clipboard'
+alias pbpaste='xclip -selection clipboard -o'
 
 # Git configuration
 if [ -e "$HOME/.git.zsh" ]
