--- a/templates/home/.zshrc.j2
+++ b/templates/home/.zshrc.j2
@@ -1,5 +1,13 @@
 {{ ansible_managed | comment }}
 
+# Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
+# Initialization code that may require console input (password prompts, [y/n]
+# confirmations, etc.) must go above this block, everything else may go below.
+if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then
+  source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
+fi
+
+
 # If you come from bash you might have to change your $PATH.
 # export PATH=$HOME/bin:/usr/local/bin:$PATH
 
@@ -86,7 +94,8 @@ source $ZSH/oh-my-zsh.sh
 
 # Theme configuration
 source "$HOME/{{ dotdir }}/powerlevel10k/powerlevel10k.zsh-theme"
-source "$HOME/.p10k.zsh"
+# To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
+[[ ! -f "${HOME}/.p10k.zsh" ]] || source "${HOME}/.p10k.zsh"
 
 # export MANPATH="/usr/local/man:$MANPATH"
 
