--- a/templates/home/.config/terminator/config.j2
+++ b/templates/home/.config/terminator/config.j2
@@ -9,10 +9,11 @@
     background_darkness = {{ terminal.background.transparency / 100 | round(2, 'floor') }}
     background_type = transparent
     cursor_color = "{{ terminal.cursor.color }}"
+    cursor_color_fg = False
+    custom_command = /usr/bin/zsh
     font = {{ terminal.font }}
     palette = "{{ terminal.palette|join(':') }}"
     scrollback_infinite = True
     scrollback_lines = {{ terminal.scrollback }}
-    use_system_font = False
     use_custom_command = True
-    custom_command = /usr/bin/zsh
+    use_system_font = False
