--- a/templates/home/.config/tilda/style.css.j2
+++ b/templates/home/.config/tilda/style.css.j2
@@ -1,10 +1,26 @@
 {{ ansible_managed | comment('cblock') }}
 
-/* #Main is the Tilda window. */
-GtkWindow#Main .notebook {
-  border-top: 0 !important;
-  border-right: 5px !important;
-  border-bottom: 5px !important;
-  border-left: 5px !important;
-  border-color: #fff !important;
+GtkBox {
+    background-color: #000;
+}
+
+notebook > header {
+  background-color: rgba(51,51,51,.9);
+  border: none;
+}
+
+notebook > header > tabs > tab {
+  background-color: rgba(80,80,80,.9);
+  border-radius: 0;
+  color: #ccc;
+  border: 0;
+  margin: 0 1px;
+  border-width: 0 1px;
+  min-width: 100px;
+  box-shadow: none;
+}
+
+notebook > header > tabs > tab:checked {
+  background: rgba(0,0,0,.8);
+  color: orange;
 }
