Force tilda on second monitor

--- a/templates/home/.config/tilda/config_0.j2
+++ b/templates/home/.config/tilda/config_0.j2
@@ -26,14 +26,14 @@ quit_key="<Shift><Control>q"
 title="Tilda"
 background_color="{{ terminal.background.color2 }}"
 # working_dir=""
-web_browser="x-www-browser"
+web_browser="xdg-open"
 increase_font_size_key="<Control>equal"
 decrease_font_size_key="<Control>minus"
 normalize_font_size_key="<Control>0"
+show_on_monitor="{{ monitor }}"
 word_chars="~-A-Za-z0-9,./?%&#:_"
 lines={{ terminal.scrollback }}
-# TODO: 125% of one screen horizontal size
-x_pos=2160
+x_pos=2183
 # TODO: Size of top bar
 y_pos=27
 tab_pos=0
@@ -97,7 +97,7 @@ show_title_tooltip=true
 # max_width=0
 # max_height=0
 # image=""
-show_on_monitor_number=1
+# show_on_monitor_number=0
 # transparency=0
 # bold=false
 # title_max_length_flag=false
