--- a/templates/etc/default/locale.j2
+++ b/templates/etc/default/locale.j2
@@ -1,5 +1,6 @@
 {{ ansible_managed | comment }}
 LANG="en_US.UTF-8"
+LC_ALL=C
 LC_PAPER="fr_FR.UTF-8"
 LC_MEASUREMENT="fr_FR.UTF-8"
 LC_MONETARY="fr_FR.UTF-8"
