--- a/templates/etc/default/locale.j2
+++ b/templates/etc/default/locale.j2
@@ -1,8 +1,16 @@
 {{ ansible_managed | comment }}
-LANG="en_US.UTF-8"
-LC_ALL=C
-LC_PAPER="fr_FR.UTF-8"
-LC_MEASUREMENT="fr_FR.UTF-8"
-LC_MONETARY="fr_FR.UTF-8"
-LC_NUMERIC="fr_FR.UTF-8"
-LC_TIME="fr_FR.UTF-8"
+# See https://www.gnu.org/software/gettext/manual/html_node/Locale-Environment-Variables.html#Locale-Environment-Variables
+LANGUAGE=
+LC_ALL=
+LC_CTYPE=C.UTF-8
+LC_NUMERIC=fr_FR.UTF-8
+LC_TIME=fr_FR.UTF-8
+LC_COLLATE=C.UTF-8
+LC_MONETARY=fr_FR.UTF-8
+LC_PAPER=fr_FR.UTF-8
+LC_NAME=fr_FR.UTF-8
+LC_ADDRESS=fr_FR.UTF-8
+LC_TELEPHONE=fr_FR.UTF-8
+LC_MEASUREMENT=fr_FR.UTF-8
+LC_IDENTIFICATION=fr_FR.UTF-8
+LANG=en_US.UTF-8
