Display time in english, with 24h time

--- a/templates/etc/default/locale.j2
+++ b/templates/etc/default/locale.j2
@@ -4,7 +4,9 @@ LANGUAGE=
 LC_ALL=
 LC_CTYPE=C.UTF-8
 LC_NUMERIC=fr_FR.UTF-8
-LC_TIME=fr_FR.UTF-8
+# Do not use fr_FR.UTF-8 to get date/time in english
+# Do not use en_US.UTF-8 to get 24h time
+LC_TIME=en_GB.UTF-8
 LC_COLLATE=C.UTF-8
 LC_MONETARY=fr_FR.UTF-8
 LC_PAPER=fr_FR.UTF-8
