Configure VSCode terminal colors

--- a/templates/home/.config/Code/User/settings.json.j2
+++ b/templates/home/.config/Code/User/settings.json.j2
@@ -8,6 +8,28 @@
     ],
     "files.trimTrailingWhitespace": true,
     "workbench.colorTheme": "Monokai",
+    "workbench.colorCustomizations": {
+        "terminal.background":"#1D2021",
+        "terminal.foreground":"#A89984",
+        "terminalCursor.background":"{{ terminal.cursor.color }}",
+        "terminalCursor.foreground":"{{ terminal.cursor.color }}",
+        "terminal.ansiBlack":"#1D2021",
+        "terminal.ansiBlue":"#0D6678",
+        "terminal.ansiBrightBlack":"#665C54",
+        "terminal.ansiBrightBlue":"#0D6678",
+        "terminal.ansiBrightCyan":"#8BA59B",
+        "terminal.ansiBrightGreen":"#95C085",
+        "terminal.ansiBrightMagenta":"#8F4673",
+        "terminal.ansiBrightRed":"#FB543F",
+        "terminal.ansiBrightWhite":"#FDF4C1",
+        "terminal.ansiBrightYellow":"#FAC03B",
+        "terminal.ansiCyan":"#8BA59B",
+        "terminal.ansiGreen":"#95C085",
+        "terminal.ansiMagenta":"#8F4673",
+        "terminal.ansiRed":"#FB543F",
+        "terminal.ansiWhite":"#A89984",
+        "terminal.ansiYellow":"#FAC03B"
+    },
     "extensions.autoUpdate": true,
     "editor.renderIndentGuides": true,
     "editor.showFoldingControls": "always",
@@ -17,6 +39,7 @@
     "editor.minimap.enabled": false,
     "terminal.integrated.fontFamily": "MesloLGS NF",
     "terminal.integrated.fontSize": 13,
+    "terminal.integrated.shell.linux": "/usr/bin/zsh",
     "explorer.confirmDragAndDrop": false,
     "editor.renderWhitespace": "all",
     "explorer.confirmDelete": false,
