Configure zoom keybindings

--- a/templates/home/.config/terminator/config.j2
+++ b/templates/home/.config/terminator/config.j2
@@ -2,6 +2,9 @@
   focus = system
   handle_size = 8
 [keybindings]
+  zoom_in = <Primary>KP_Add
+  zoom_normal = <Primary>KP_0
+  zoom_out = <Primary>KP_Subtract
 [plugins]
 [profiles]
   [[default]]
