--- a/templates/home/.config/Code/User/settings.json.j2
+++ b/templates/home/.config/Code/User/settings.json.j2
@@ -3,9 +3,6 @@
     "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
     "workbench.statusBar.visible": true,
-    "markdown.styles": [
-        "https://raw.githubusercontent.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css"
-    ],
     "files.trimTrailingWhitespace": true,
     "workbench.colorTheme": "Monokai",
     "workbench.colorCustomizations": {
@@ -54,6 +51,8 @@
     "breadcrumbs.enabled": true,
     "explorer.autoReveal": false,
     "editor.renderControlCharacters": true,
-    "workbench.iconTheme": "vscode-icons",
-    "swaggerViewer.defaultPort": 62123
+    "workbench.iconTheme": "material-icon-theme",
+    "swaggerViewer.defaultPort": 62123,
+    "go.formatTool": "goimports",
+    "git.suggestSmartCommit": false
 }
