--- a/templates/home/.config/Code/User/settings.json.j2
+++ b/templates/home/.config/Code/User/settings.json.j2
@@ -1,9 +1,34 @@
 // Place your settings in this file to overwrite the default settings
 {
+    "breadcrumbs.enabled": true,
+    "editor.minimap.enabled": false,
+    "editor.renderIndentGuides": true,
+    "editor.renderControlCharacters": true,
+    "editor.renderWhitespace": "all",
+    "editor.showFoldingControls": "always",
+    "editor.tabSize": 2,
+    "editor.wordWrap": "on",
+    "explorer.autoReveal": false,
+    "explorer.confirmDelete": false,
+    "explorer.confirmDragAndDrop": false,
+    "extensions.autoUpdate": true,
+    "files.associations": {
+        "DIFFS": "diff"
+    },
+    "files.trimTrailingWhitespace": true,
+    "git.suggestSmartCommit": false
+    "go.formatTool": "goimports",
+    "python.linting.pylintEnabled": true,
+    "shellcheck.disableVersionCheck": true,
+    "shellcheck.run": "onSave",
+    "swaggerViewer.defaultPort": 62123,
     "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
-    "workbench.statusBar.visible": true,
-    "files.trimTrailingWhitespace": true,
+    "terminal.integrated.fontFamily": "MesloLGS NF",
+    "terminal.integrated.fontSize": 13,
+    "terminal.integrated.shell.linux": "/usr/bin/zsh",
+    "window.titleBarStyle": "custom",
+    "window.zoomLevel": 0,
     "workbench.colorTheme": "Monokai",
     "workbench.colorCustomizations": {
         "terminal.background":"#1D2021",
@@ -27,32 +52,8 @@
         "terminal.ansiWhite":"#A89984",
         "terminal.ansiYellow":"#FAC03B"
     },
-    "extensions.autoUpdate": true,
-    "editor.renderIndentGuides": true,
-    "editor.showFoldingControls": "always",
-    "shellcheck.run": "onSave",
-    "window.zoomLevel": 0,
-    "workbench.startupEditor": "newUntitledFile",
-    "editor.minimap.enabled": false,
-    "terminal.integrated.fontFamily": "MesloLGS NF",
-    "terminal.integrated.fontSize": 13,
-    "terminal.integrated.shell.linux": "/usr/bin/zsh",
-    "explorer.confirmDragAndDrop": false,
-    "editor.renderWhitespace": "all",
-    "explorer.confirmDelete": false,
-    "editor.wordWrap": "on",
-    "shellcheck.disableVersionCheck": true,
-    "files.associations": {
-        "DIFFS": "diff"
-    },
-    "python.linting.pylintEnabled": true,
-    "window.titleBarStyle": "custom",
-    "editor.tabSize": 2,
-    "breadcrumbs.enabled": true,
-    "explorer.autoReveal": false,
-    "editor.renderControlCharacters": true,
     "workbench.iconTheme": "material-icon-theme",
-    "swaggerViewer.defaultPort": 62123,
-    "go.formatTool": "goimports",
-    "git.suggestSmartCommit": false
+    "workbench.startupEditor": "newUntitledFile",
+    "workbench.statusBar.visible": true,
+    "workbench.tree.indent": 16,
 }
