--- a/roles/locale/templates/etc/default/locale.j2
+++ b/roles/locale/templates/etc/default/locale.j2
@@ -1,7 +1,7 @@
 {{ ansible_managed | comment }}
 # See https://www.gnu.org/software/gettext/manual/html_node/Locale-Environment-Variables.html#Locale-Environment-Variables
 LANGUAGE=
-LC_ALL=
+LC_ALL=en_US.UTF-8
 LC_CTYPE=C.UTF-8
 LC_NUMERIC=fr_FR.UTF-8
 # Do not use fr_FR.UTF-8 to get date/time in english
