Enable more plugins

--- a/roles/zsh/templates/home/.zshrc.j2
+++ b/roles/zsh/templates/home/.zshrc.j2
@@ -73,17 +73,26 @@ COMPLETION_WAITING_DOTS="true"
 # Add wisely, as too many plugins slow down shell startup.
 plugins=(
   ansible
+  aws
+  bazel
   colorize
   command-not-found
   common-aliases
   docker
   docker-compose
+  gcloud
   git
+  gitfast
   git-flow-avh
+  golang
+  helm
   httpie
-  kube-ps1
+  kops
   kubectl
+  kube-ps1
   npm
+  sudo
+  terraform
   tmux
   vscode
 )
