[code] bracket colorization is now native, removed extension

--- a/roles/code/templates/home/.config/Code/User/settings.json.j2
+++ b/roles/code/templates/home/.config/Code/User/settings.json.j2
@@ -6,6 +6,8 @@
     "editor.renderControlCharacters": true,
     "editor.renderWhitespace": "all",
     "editor.showFoldingControls": "always",
+    "editor.bracketPairColorization.enabled": true,
+    "editor.guides.bracketPairs": true,
     "editor.tabSize": 2,
     "editor.wordWrap": "on",
     "explorer.autoReveal": false,
