--- a/roles/zsh/templates/home/.zshrc.j2
+++ b/roles/zsh/templates/home/.zshrc.j2
@@ -91,6 +91,7 @@ plugins=(
   kubectl
   kube-ps1
   npm
+  shrink-path
   sudo
   terraform
   tmux
@@ -129,11 +130,3 @@ source "$HOME/{{ dotdir }}/powerlevel10k/powerlevel10k.zsh-theme"
 # Example aliases
 # alias zshconfig="mate ~/.zshrc"
 # alias ohmyzsh="mate ~/.oh-my-zsh"
-alias pbcopy='xclip -selection clipboard'
-alias pbpaste='xclip -selection clipboard -o'
-
-# Git configuration
-if [ -e "$HOME/.git.zsh" ]
-then
-  source "$HOME/.git.zsh"
-fi
