--- a/roles/zsh/templates/home/.p10k.zsh.j2
+++ b/roles/zsh/templates/home/.p10k.zsh.j2
@@ -100,9 +100,9 @@
       time                    # current time
       # =========================[ Line #2 ]=========================
       newline
-      # public_ip             # public IP address
+      public_ip             # public IP address
       # proxy                 # system-wide http/https/ftp proxy
-      # battery               # internal battery
+      battery               # internal battery
       # example               # example user-defined segment (see prompt_example function below)
   )
 
